@@ -23,7 +23,10 @@ use lib 't/lib';
 }
 
 my $tempdir = Path::Tiny->tempdir(CLEANUP => 1);
-$tempdir->child('config.ini')->spew(qq{[Chrome::ExtraPrompt]\ncommand = $^X -e"exit 1"});
+$tempdir->child('config.ini')->spew(qq{
+[Chrome::ExtraPrompt]
+command = $^X -e"warn qq{warning 1\\n}; warn qq{warning 2\\n}; exit 1"
+});
 
 # I need to make sure the chrome sent to the real zilla builder is the same
 # chrome that was received from setup_global_config -- because the test
@@ -71,8 +74,12 @@ is(
 
 cmp_deeply(
     \@warnings,
-    [ "[Chrome::ExtraPrompt] process exited with status 1\n" ],
-    'warning is issued when the process did not exit successfully',
+    [
+        "[Chrome::ExtraPrompt] warning 1\n",
+        "[Chrome::ExtraPrompt] warning 2\n",
+        "[Chrome::ExtraPrompt] process exited with status 1\n",
+    ],
+    'warning is issued when the process did not exit successfully; stderr is also captured',
 );
 
 diag 'got log messages: ', explain $tzil->log_messages
